--- a/views/partials/burger/burger-block.handlebars
+++ b/views/partials/burger/burger-block.handlebars
@@ -1,5 +1,5 @@
 <li>
-	{{name}}
+	{{burger_name}}
 
 	<button class="change-devoured" data-id="{{id}}" data-newsleep="{{devoured}}">
 		{{#if devoured}}DEVOUR TIME!{{else}}RE-EAT!{{/if}}
