--- a/views/partials/burger/burger-block.handlebars
+++ b/views/partials/burger/burger-block.handlebars
@@ -1,8 +1,8 @@
 <li>
 	{{burger_name}}
 
-	<button class="change-devoured" data-id="{{id}}" data-newsleep="{{devoured}}">
-		{{#if devoured}}DEVOUR TIME!{{else}}RE-EAT!{{/if}}
+	<button class="change-devoured" data-id="{{id}}" data-newDevoured="{{devoured}}">
+		{{#if devoured}}RE-EAT!{{else}}DEVOUR TIME!{{/if}}
 	</button>
 
 	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
