--- a/views/partials/burger/burger-block.handlebars
+++ b/views/partials/burger/burger-block.handlebars
@@ -1,7 +1,7 @@
 <li>
 	{{burger_name}}
 
-	<button class="change-devoured" data-id="{{id}}" data-newDevoured="{{devoured}}">
+	<button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
 		{{#if devoured}}RE-EAT!{{else}}DEVOUR TIME!{{/if}}
 	</button>
 
