--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,8 @@
 <h1>Eat Da Burger!</h1>
 
+<div class="row">
+  <div class="column">
 <h2>Burgers that are not devoured!</h2>
-
 <ul>
   {{#each burger}}
     {{#unless devoured}}
@@ -9,9 +10,9 @@
     {{/unless}}
   {{/each}}
 </ul>
-
+  </div>
+  <div class="column">
 <h2>Burgers that are devoured!</h2>
-
 <ul>
   {{#each burger}}
     {{#if devoured}}
@@ -19,6 +20,8 @@
     {{/if}}
   {{/each}}
 </ul>
+  </div>
+</div>
 
 <h2>Add a Burger</h2>
 <form class="create-form">
@@ -33,6 +36,8 @@
     <input type="radio" name="devoured" value="1" checked> Devoured!<br>
     <input type="radio" name="devoured" value="0"> Not Devoured!
   </div>
+
+
 
   <button type="submit">Add Burger</button>
 </form>
