--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,6 +2,17 @@
     box-sizing: border-box;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+h1, h2, h3{
+    text-align: center;
+}
+
 li {
     padding: 5px;
     margin: 5px;
