--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<img src = "/assets/img/pixel-burger.jpg" alt = "burger" class ="center">
+<img src = "/assets/img/pixel-burger.jpg" alt = "burger" class ="center" style="width:128px;height:128px;">
 
 <h1>Eat Da Burger!</h1>
 
