--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -26,20 +26,18 @@
 </div>
 
 <h2>Add a Burger</h2>
-<form class="create-form">
 
+<div class ="burgerBox">
+<form class="create-form">
   <div class="form-group">
     <label for="ca">Burger Name:</label>
     <input type="text" id="ca" name="name">
   </div>
-
   <div class="form-group">
     <label for="devoured">Hungry?</label><br>
-    <input type="radio" name="devoured" value="1" checked> Devoured!<br>
-    <input type="radio" name="devoured" value="0"> Not Devoured!
+    <input type="radio" name="devoured" value="0"checked> Not Devoured!
+    <input type="radio" name="devoured" value="1" > Devoured!<br>
   </div>
-
-
-
   <button type="submit">Add Burger</button>
 </form>
+</div>
